:bug: Fix release action not showing up in github (#3)

--- a/.github/workflows/release_action.yml
+++ b/.github/workflows/release_action.yml
@@ -1,4 +1,4 @@
-name: Release Workflow
+name: Release Action Workflow
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
