--- a/.github/workflows/release_action.yml
+++ b/.github/workflows/release_action.yml
@@ -7,6 +7,7 @@ on:
         description: 'Version to publish, by semver keyword.'
         required: true
         default: patch
+        type: choice
         options:
           - patch
           - minor
