--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@hubbleprotocol/farms-sdk": "^0.3.7",
     "@hubbleprotocol/kamino-sdk": "^3.0.16",
     "@hubbleprotocol/scope-sdk": "^3.0.6",
-    "@mongodb-js/zstd": "^1.2.0",
+    "@bokuweb/zstd-wasm": "^0.0.20",
     "@pythnetwork/client": "^2.5.1",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.1.8",
@@ -68,7 +68,7 @@
     "@types/bs58": "^4.0.1",
     "@types/chai": "^4.3.5",
     "@types/jest": "^27.0.3",
-    "@types/mocha": "^10.0.1",
+    "@types/mocha": "^10.0.6",
     "@types/node-fetch": "^2.6.7",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -88,7 +88,7 @@
     "start-server-and-test": "^2.0.0",
     "ts-jest": "^28.0.7",
     "ts-mocha": "^10.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.22.10",
     "typescript": "^4.9.5",
     "typescript-eslint": "^0.0.1-alpha.0"
