--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES6",
     "module": "commonjs",
     "declaration": true,
     "allowJs": true,
@@ -14,7 +14,9 @@
     "inlineSources": true,
     "noImplicitAny": false,
     // "moduleResolution": "node",
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "paths": {
+      "*": ["./node_modules/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["tests", "src/client.ts", "dist", "node_modules"]
