--- a/configs/reserve_config_example.json
+++ b/configs/reserve_config_example.json
@@ -1,22 +1,44 @@
 {
   "status": 0,
-  "assetTier": 0,
-  "hostFixedInterestRateBps": 0,
-  "multiplierSideBoost": [1, 1],
-  "multiplierTagBoost": [1, 1, 1, 1, 1, 1, 1, 1],
-  "protocolTakeRatePct": 50,
-  "protocolLiquidationFeePct": 0,
   "loanToValuePct": 65,
   "liquidationThresholdPct": 75,
   "minLiquidationBonusBps": 500,
+  "protocolLiquidationFeePct": 0,
+  "protocolTakeRatePct": 0,
+  "assetTier": 0,
+  "multiplierSideBoost": [1, 1],
   "maxLiquidationBonusBps": 1000,
   "badDebtLiquidationBonusBps": 99,
-  "deleveragingMarginCallPeriodSecs": "604800",
-  "deleveragingThresholdSlotsPerBps": "7200",
   "fees": {
-    "borrowFeeSf": "0",
-    "flashLoanFeeSf": "0",
+    "borrowFee": "0",
+    "flashLoanFee": "0",
     "padding": [0, 0, 0, 0, 0, 0, 0, 0]
+  },
+  "depositLimit": "6000000000000000",
+  "borrowLimit": "5400000000000000",
+  "tokenInfo": {
+    "name": "SOL",
+    "heuristic": {
+      "exp": "0",
+      "lower": "0",
+      "upper": "0"
+    },
+    "maxTwapDivergenceBps": "4050",
+    "maxAgePriceSeconds": "120",
+    "maxAgeTwapSeconds": "240",
+    "scopeConfiguration": {
+      "priceFeed": "3NJYftD5sjVfxSnUdZ1wVML8f3aC6mp1CXCL6L7TnU8C",
+      "priceChain": [0, 65535, 65535, 65535],
+      "twapChain": [52, 65535, 65535, 65535]
+    },
+    "switchboardConfiguration": {
+      "priceAggregator": "11111111111111111111111111111111",
+      "twapAggregator": "11111111111111111111111111111111"
+    },
+    "pythConfiguration": {
+      "price": "11111111111111111111111111111111"
+    },
+    "blockPriceUsage": 0
   },
   "borrowRateCurve": {
     "points": [
@@ -66,35 +88,6 @@
       }
     ]
   },
-  "borrowFactorPct": "125",
-  "depositLimit": "6000000000000000",
-  "borrowLimit": "5400000000000000",
-  "tokenInfo": {
-    "name": [83, 79, 76, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-    "heuristic": {
-      "lower": "0",
-      "upper": "0",
-      "exp": "0"
-    },
-    "maxTwapDivergenceBps": "4000",
-    "maxAgePriceSeconds": "120",
-    "maxAgeTwapSeconds": "240",
-    "scopeConfiguration": {
-      "priceFeed": "3NJYftD5sjVfxSnUdZ1wVML8f3aC6mp1CXCL6L7TnU8C",
-      "priceChain": [0, 65535, 65535, 65535],
-      "twapChain": [52, 65535, 65535, 65535]
-    },
-    "switchboardConfiguration": {
-      "priceAggregator": "11111111111111111111111111111111",
-      "twapAggregator": "11111111111111111111111111111111"
-    },
-    "pythConfiguration": {
-      "price": "11111111111111111111111111111111"
-    },
-    "blockPriceUsage": 0,
-    "reserved": [0, 0, 0, 0, 0, 0, 0],
-    "padding": ["0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0", "0"]
-  },
   "depositWithdrawalCap": {
     "configCapacity": "400000000000000",
     "currentTotal": "0",
@@ -107,10 +100,14 @@
     "lastIntervalStartTimestamp": "0",
     "configIntervalLengthSeconds": "86400"
   },
+  "deleveragingMarginCallPeriodSecs": "604800",
+  "borrowFactorPct": "125",
   "elevationGroups": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+  "deleveragingThresholdSlotsPerBps": "7200",
+  "multiplierTagBoost": [1, 1, 1, 1, 1, 1, 1, 1],
   "disableUsageAsCollOutsideEmode": 0,
   "utilizationLimitBlockBorrowingAbove": 80,
-  "reserved1": [0, 0],
+  "hostFixedInterestRateBps": 0,
   "borrowLimitOutsideElevationGroup": "18446744073709551615",
   "borrowLimitAgainstThisCollateralInElevationGroup": [
     "0",
@@ -145,5 +142,6 @@
     "0",
     "0",
     "0"
-  ]
+  ],
+  "reserved1": [0, 0]
 }
