Add klend-sdk examples (#92)
* Add klend-sdk examples

* Refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["tests", "src/client.ts", "dist", "node_modules"]
+  "exclude": ["tests", "src/client.ts", "dist", "node_modules", "examples"]
 }
