--- a/examples/package.json
+++ b/examples/package.json
@@ -20,19 +20,24 @@
     "reserve-apy-history": "ts-node example_reserve_apy_history.ts",
     "reserve-caps": "ts-node example_reserve_caps.ts",
     "reserve-supply-borrow": "ts-node example_reserve_supply_and_borrow.ts",
+    "deposit-mint-ctokens": "ts-node example_deposit_mint_ctokens.ts",
+    "deposit-in-obligation": "ts-node example_deposit_in_obligation.ts",
+    "burn-ctokens-redeem": "ts-node example_burn_ctokens_redeem_tokens.ts",
+    "harvest-farm-reward": "ts-node example_harvest_reward.ts",
     "build": "rm -rf dist/; tsc"
   },
   "dependencies": {
+    "@hubbleprotocol/farms-sdk": "^1.0.1",
     "@kamino-finance/klend-sdk": "^3.2.12",
     "@solana/web3.js": "^1.95.2",
     "axios": "^1.7.3"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1",
-    "@types/node-fetch": "^2.6.11",
     "@types/node": "^22.1.0",
-    "typescript": "^5.5.4",
+    "@types/node-fetch": "^2.6.11",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "prettier": "^3.3.3"
+    "typescript": "^5.5.4"
   }
 }
