Publish src to npm (#113)
- Publish src to npm
- Move test utils to runner dir and add tests tsconfig.json for better ide integration

--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src/**/*.ts"
   ],
   "license": "MIT",
   "scripts": {
     "docs": "typedoc",
     "prepublish": "yarn build",
     "build": "rm -rf dist/; tsc",
+    "build:test": "yarn tsc --project ./tests/tsconfig.json",
     "test": "npx ts-mocha tests/**/*.test.ts --exit",
     "watch": "tsc --watch",
     "coverage": "jest --coverage",
+    "clean": "rm -rf dist/",
+    "clean:deps": "rm -rf node_modules",
+    "clean:all": "yarn clean && yarn clean:deps",
     "lint": "yarn prettier --check .; yarn eslint .",
     "lint:fix": "yarn prettier --write .; yarn eslint . --fix",
     "codegen": "yarn anchor-client-gen src/idl.json ./src/idl_codegen/ --program-id KLend2g3cP87fffoy8q1mQqGKjrxjC8boSyAYavgmjD",
@@ -50,10 +55,11 @@
     "@kamino-finance/kliquidity-sdk": "^6.1.0",
     "@pythnetwork/client": "^2.5.1",
     "@solana/buffer-layout": "^4.0.0",
-    "@solana/spl-token": "^0.3.11",
+    "@solana/spl-token": "^0.4.8",
     "@solana/web3.js": "^1.87.6",
     "@switchboard-xyz/sbv2-lite": "^0.1.0",
     "axios": "^1.6.8",
+    "base58-js": "^2.0.0",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
